# ChasmaWebApi/Data/Responses/Configuration/GitRmResponse.cs
@@ -1,0 +1,9 @@
+﻿namespace ChasmaWebApi.Data.Responses.Configuration
+{
+    /// <summary>
+    /// Class representing the response to a request to remove a specific file from the repository.
+    /// </summary>
+    public class GitRmResponse : ResponseBase
+    {
+    }
+}
