# ChasmaWebApi/Data/Responses/Status/GitRestoreResponse.cs
@@ -1,0 +1,9 @@
+﻿namespace ChasmaWebApi.Data.Responses.Status
+{
+    /// <summary>
+    /// Class represents the response to a request to restore a file.
+    /// </summary>
+    public class GitRestoreResponse : ResponseBase
+    {
+    }
+}
